# heroku-fast-api-sample

./: Procfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/routes/: api.py  hello.py
src/core/: config.py  events.py
src/core/settings/: app.py  development.py
