[tool.poetry]
name = "heroku-fast-api-sample"
version = "0.1.0"
description = ""
authors = ["Takuma KATANOSAKA <bumpbumpbump.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
tortoise-orm = "^0.19.2"
pydantic = "^1.9.1"
bandit = "^1.7.4"
loguru = "^0.6.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.6.0"
isort = "^5.10.1"
invoke = "^1.7.1"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-asyncio = "^0.19.0"
pytest-xdist = "^2.5.0"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
  --numprocesses=auto
  --asyncio-mode=auto
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
